Inicio consumo de servicios

--- a/src/components/pages/main/consumo/consumo.html
+++ b/src/components/pages/main/consumo/consumo.html
@@ -4,12 +4,15 @@
   <div class="col-12">
 
     <h2>Servicios</h2>
-    <ul>
-      <li>
-        <strong>REST1: </strong>
-        <a href="https://mindicador.cl/api">https://mindicador.cl/api</a>
-      </li>
-    </ul>
+
+    <b-list-group>
+      <b-list-group-item>
+        <a href="https://mindicador.cl/api">mindicador.cl</a>
+      </b-list-group-item>
+      <b-list-group-item>
+        <a href="https://api.coindesk.com/v1/bpi/currentprice.json">currentprice.json</a>
+      </b-list-group-item>
+    </b-list-group>
 
   </div>
 
