--- a/src/components/pages/main/main.html
+++ b/src/components/pages/main/main.html
@@ -5,13 +5,14 @@
     <div class="col-12">
       <h1>
         TEST1
-        <small>Consumo de servicios REST</small>
+        <small>Inidcadores Económicos</small>
         <i class="fas fa-chart-line"></i>
       </h1>
     </div>
 
   </section>
 
+  <Indicadores />
   <Consumo />
 
 </div>
